--- a/index.html
+++ b/index.html
@@ -105,9 +105,13 @@
                             <i class="fa-solid fa-folder-open ml-2"></i>טען מסלוליק
                         </button>
                         <!-- Trip metadata (name & description) -->
-                        <div class="flex bg-gray-800 text-gray-300 rounded px-2 py-1 mr-2">
-                            <input id="tripNameInput" type="text" placeholder="שם המסלול" class="input w-48 px-2 py-1 rounded border">
-                            <input id="tripDescInput" type="text" placeholder="תיאור קצר" class="input w-128 mr-4 px-2 py-1 rounded border">
+                        <div class="flex rounded">
+                            <div class="flex bg-gray-800 text-gray-300 rounded">
+                                <input id="tripNameInput" type="text" placeholder="שם המסלול" class="input w-48 px-2 py-1 rounded border">
+                            </div>
+                            <div class="flex bg-gray-800 text-gray-300 rounded mr-4">
+                                <input id="tripDescInput" type="text" placeholder="תיאור קצר" class="input w-128 px-2 py-1 rounded border">
+                            </div>
                         </div>
                         <input
                             type="file"
@@ -604,7 +608,7 @@
         _days.forEach((dayObj, dayIdx) => {
             if (!dayObj.color) dayObj.color = dayColors[dayIdx % dayColors.length];
             const dayDiv = document.createElement('div');
-            dayDiv.className = 'bg-gray-900 rounded-lg p-4 shadow w-full border border-gray-600 text-gray-800';
+            dayDiv.className = 'bg-gray-900 rounded-lg p-3 shadow w-full border border-gray-600 text-gray-800';
             dayDiv.setAttribute('data-day-idx', dayIdx);
             // Only allow drag if started from the header (first child)
             dayDiv.addEventListener('dragstart', function(e) {
