add user's guide

--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
                     <button id="tabEditor" class="px-3 py-1 bg-green-600 text-white rounded hover:bg-green-700">
                         <i class="fa-solid fa-pencil ml-2"></i>עורך
                     </button>
+                    <a href="user_guide.html" target="_blank"><button id="userGuide" class="px-3 py-1 text-white rounded">
+                        <i class="fa-solid fa-circle-info"></i>
+                    </button></a>
                 </div>
             </header>
             <!-- Main content: Map tab and Editor tab (hidden/shown by tabs) -->
