--- a/index.html
+++ b/index.html
@@ -1138,7 +1138,9 @@
                 try {
                     const tName = document.getElementById('tripNameInput');
                     const tDesc = document.getElementById('tripDescInput');
-                    //if (tName) tName.addEventListener('input', function(e){ ensureTrip(); trip.name = e.target.value || ''; saveMetaDebounced(); });
+                    if (tName) tName.addEventListener('input', function(e){ ensureTrip(); trip.name = e.target.value || ''; 
+                    //saveMetaDebounced(); 
+                });
                     if (tDesc) tDesc.addEventListener('input', function(e){ ensureTrip(); trip.description = e.target.value || ''; saveMetaDebounced(); });
                 } catch (e) {}
             })();
