--- a/index.html
+++ b/index.html
@@ -669,7 +669,6 @@
                         <span class="text-lg font-bold">יום ${dayObj.day}</span>
                         <input type="color" class="w-8 h-8 rounded" value="${dayObj.color || '#ff0000'}" onchange="editDayField(${dayIdx},'color',this.value)">
                         <input class="input w-40 px-2 py-1 rounded border bg-white text-black date-input" type="text" data-day="${dayIdx}" data-iso="${dayObj.date || ''}" value="${(dayObj.date ? (dayObj.dow ? dayObj.dow + ', ' + dayObj.date : dayObj.date) : (dayObj.dow || ''))}" placeholder="בחר תאריך" />
-                        <span class="text-sm text-gray-200 mr-3" title="יום בשבוע">${dayObj.dow ? dayObj.dow : ''}</span>
                         <button class="text-red-400 hover:text-red-600" title="מחק יום" onclick="deleteDay(${dayIdx})"><i class="fa-solid fa-trash"></i></button>
                         <button class="text-orange-300 hover:text-orange-300" title="הדבק פעילות" onclick="pasteAttractionToDay(${dayIdx})"><i class="fa-solid fa-paste"></i></button>
                     </div>
@@ -1064,7 +1063,7 @@
     if (_trip && _trip.description) bodyHtml += `<div style="margin-bottom:12px;color:#cbd5e1">${escHtml(_trip.description)}</div>`;
     getDays().forEach(day => {
             const dayColor = day.color || '#38bdf8';
-            bodyHtml += `<div class="day" style="border-color:${dayColor}"><h2>יום ${day.day} ${day.dow ? '('+day.dow+')' : ''}</h2>`;
+            bodyHtml += `<div class="day" style="border-color:${dayColor}"><h2>יום ${day.day}: ${(day.date ? (day.dow ? day.dow + ', ' + day.date : day.date) : (day.dow || ''))}</h2>`;
             if (Array.isArray(day.attractions) && day.attractions.length) {
                 day.attractions.forEach(a => {
                     const [lat, lng] = a.coordinates || [0,0];
